fixed mobile for section 1

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 </div>
 <div class="container section" id="first-sec">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">    
+    <div class="col-sm-6 col-sm-offset-3 mobile-fix">    
         <h1 class="section_titles">Cycle of exploitation</h1>
 
         <p><span class="firstcharacter">D</span>ECEMBER 2015 -- “What do you mean he’s having a heart attack?” Christy Hernandez asked the doctor with the clipboard.</p>
@@ -154,7 +154,7 @@
 
   <div class="container section">
     <div class="row">
-     <div class="col-sm-6 col-sm-offset-3"> 
+     <div class="col-sm-6 col-sm-offset-3 mobile-fix"> 
         <p>There are about 75,000 more drivers all over the country in similar positions. But because the entire industry is built on this model of non-employment -- not unlike that of Uber -- companies can’t afford to change now, let alone pay years of back wages. Taking on the labor costs of an employee fleet is a dangerous proposition in the hyper-competitive port trucking market, where margins are razor-thin.</p>
 
         <p>The West Coast waterfront became the entire industry’s fault line after a well-intentioned environmental policy came to a head last year. The IRP found that a complex leasing program permeated hundreds of different California port trucking companies overnight in 2007. The industry bought rigs then rented them out with the promise of ownership. The leases tether driver to truck to company, without the benefits, pay or stability of traditional employment. If you walk or get sick, like Hernandez, those years of lease payments vanish. The balance goes back to zero and another driver takes your seat.</p>
@@ -167,7 +167,7 @@
 
   <div class="container section">
     <div class="row">
-     <div class="col-sm-6 col-sm-offset-3"> 
+     <div class="col-sm-6 col-sm-offset-3 mobile-fix"> 
         <p>The IRP found that less than 10 percent of successful wage claims in port trucking have been paid out, a chronic symptom of backlog at the state’s embattled labor commissioner, coupled with the industry’s many escape routes. Some of the awards are so high that companies can’t afford to honor them -- as much as $300 thousand per driver in some cases. The state government doesn’t have the legal authority or manpower for sweeping policy change to help drivers before they need to sue their bosses. “It’s never been [our] intent to reclassify,” said Edna Garcia Earley, a lawyer with the labor commissioner. “We just want them to properly classify their workers under the law.”</p>
 
         <p>But most companies have avoided the law through settlements, while others have rolled the cases through years of frivolous appeals. Some have skirted the labor commissioner altogether through shell companies and bankruptcy court.</p>
@@ -177,9 +177,9 @@
       </div>
   </div>
 
-<div class="container section">
+<div class="container section removeContainer">
   <div class="row">
-    <div class="col-sm-8 col-sm-offset-2">  
+    <div class="col-sm-8 col-sm-offset-2 mobile-fix">  
         <p class="long-quote">“I am a believer in free markets,” an L.A. judge said after a company appealed a labor commissioner's decision. “This was not a free and open market.”</p>
     </div>
   </div>
@@ -187,7 +187,7 @@
 
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">
+    <div class="col-sm-6 col-sm-offset-3 mobile-fix">
         <p>Other major port cities have similar programs, but not the legal or political climate to do much about it. Likewise, the federal government has been slow to step in with policy reform because of the trucking sector’s of insulation and deregulation, going back to the Motor Carrier Act of 1980, when companies shifted to independent contractors -- also called “owner operators” -- to cut costs and remain competitive.</p>
 
         <p>An employee is protected under the Fair Labor Standards Act, entitled to minimum wage, overtime, unemployment insurance, rest and lunch breaks, worker’s comp, health benefits and collective bargaining. An independent contractor sacrifices those labor liberties for the flexibility of being a small business owner. You can choose jobs as you please, negotiate contracts and work longer hours to earn a better living.</p>
@@ -204,7 +204,7 @@
 
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">
+    <div class="col-sm-6 col-sm-offset-3 mobile-fix">
 
         <p>“It’s not the American dream they sell you,” said Jesse Zuniga, a driver in the Port of Oakland. It’s something closer to “a nightmare.” A chef once, Zuniga drove as an independent contract for seven years, scraping by around minimum wage. His company Shippers Transport Express switched to an employee business model in a lawsuit settlement. He still beats himself up for not having the money to keep his oldest daughter in college. She had to drop out because money was too tight. “I wasn’t there to help her out,” he said, crying over the phone, “to help her succeed.”</p>
 
@@ -228,7 +228,7 @@
         <img src="https://s3-us-west-2.amazonaws.com/port-feudal/dipt4.jpg"  class="img-responsive center-block photo photo-medium">
        <p class="caption">Trucks line up outside the Port of Oakland’s inner harbor during last year’s container slowdown on the West Coast. Independent contractors’ efficiency plummeted and many went bankrupt (top and left). Eric Lazito, and independent contractor in Oakland, waits outside the terminal. His daughters’ names are tattooed on the side of the cab.</p>
 
-     <div class="col-sm-6 col-sm-offset-3">    
+     <div class="col-sm-6 col-sm-offset-3 mobile-fix">    
         <p>The global logistics network is a complex web of tiny, moving parts, each dependent on one another like the wheels inside a watch. Billions rely on it for their everyday life; millions for their livelihood. Ports are economic engines, job-producers, all over the world, especially in California.</p>
 
         <p>The largest port in the country, Los Angeles -- often called “America’s port -- combines with the adjoining second largest port in Long Beach to form the San Pedro complex, which spans 68 miles of waterfront. It’s an industrial jungle with a canopy of containers and cranes piercing the sky, thousands of trucks crawling below.</p>
@@ -258,7 +258,7 @@
 
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">   
+    <div class="col-sm-6 col-sm-offset-3 mobile-fix">   
 
         <p>“You mean besides from you and me, and everyone else who buys stuff from stores?” said Kristen Monaco, a division chief at the Bureau of Labor Statistics. She spent her previous career conducting academic surveys of the trucking industry, with a particular interest in independent contractors at the ports. “And the interests who like the setup the way it is also spend a lot of time talking to people on the Hill as well.” The status quo has long benefited international commerce: independent contractors cost less to move containers.</p>
 
@@ -273,7 +273,7 @@
 
 <div class="container section">
     <div class="row">
-     <div class="col-sm-6 col-sm-offset-3">
+     <div class="col-sm-6 col-sm-offset-3 mobile-fix">
         <p><span class="firstcharacter">C</span>hristy gets on her dad about the pills. He forgets to take them sometimes. But he’s conscientious, diligent about dabbing the corners of his mouth with a napkin every couple minutes. Boca bien? he asks her. When recounting his story, a life of hard work and poverty, he speaks with steady clarity. The one time he did cry, though, he made a point to shield his face from Christy, who handed him another napkin.</p>
 
         <p>When he first came here, Hernandez worked in the fields for years, sleeping in a one-room addition with a dozen others. He started making real money -- $4 an hour -- when he got promoted to an Oxnard packinghouse, where he drove a forklift carrying lemons. On the weekends, he sold near-spoiled fruit at a flee market in downtown L.A.</p>
@@ -298,9 +298,9 @@
   </div>
 </div> 
 
-<div class="container section">
+<div class="container section removeContainer">
   <div class="row">
-    <div class="col-sm-8 col-sm-offset-2">  
+    <div class="col-sm-8 col-sm-offset-2 mobile-fix">  
         <p class="long-quote"> “If anyone says they’re happy being an owner-operator right now, then they are insane. We’re not making enough to take care of our families let alone the business they say we have.”</p>
     </div>
   </div>
@@ -308,7 +308,7 @@
 
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">
+    <div class="col-sm-6 col-sm-offset-3 mobile-fix">
         <img src="assets/images/test.gif" data-src="https://s3-us-west-2.amazonaws.com/port-feudal/img_cauley_bw.jpg"  class="img-responsive center-block photo photo-medium lazy">    
         <p class="caption">Carol Cauley, an independent contractor for C&K Trucking, stands outside her home in Savannah, GA. Cauley spends more time in the truck than in the house, and her two sons grew up without seeing her around. She said she takes home less than $20,000 a year.<span class="attribution">Photo courtesy of <a src="http://www.ginxhudgins.com/">Ginx Hudgins</a>.</span></p>
 
@@ -358,27 +358,24 @@
 
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">    
+    <div class="col-sm-6 col-sm-offset-3 mobile-fix">    
         <p>Deregulation had a noble impetus, encouraged by liberals and conservatives alike: stave runaway inflation from the 70s and provide more supply-chain jobs in low-income communities, via competition and international trade. Port trucking, for instance, could now offer work for urban families (unlike most of trucking they drive in a fixed location by the harbor.) “Despite these high hopes,” Rutgers economist and port trucking expert David Bensman explains, “deregulation wrecked the drayage industry:”</p>
 
       </div>
   </div>
 </div> 
 
-<div class="container section">
+<div class="container section removeContainer">
   <div class="row">
-    <div class="col-sm-8 col-sm-offset-2">  
+    <div class="col-sm-8 col-sm-offset-2 mobile-fix">  
         <p class="long-quote"> “New companies entered the industry, hiring their drivers non-union. Established companies faltered. Some went non-union, others went out of business. The firms that triumphed established a new business model. They sold all or most of their trucks to the drivers, then contracted with them on a per-load basis. The emerging independent contracting model meant trucking companies had few fixed costs, had no responsibility for workers’ compensation or unemployment insurance fund contributions, paid no social security taxes, and were able to obtain drivers’ services without paying for health care costs or pension plan.”</p>
     </div>
   </div>
 </div> 
-<div class="container section">
+<div class="container section ">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">  
+    <div class="col-sm-6 col-sm-offset-3 mobile-fix">  
         <p>The dray spread particularly thin while global trade expanded during the retail boom of the 90s. “While deregulation of trucking has negatively impacted working conditions for many truck drivers,” another study notes, “it is the ‘drayers’ who face the most severe circumstances.””</p>
-
-
-        
     </div>
   </div>
 </div> 
@@ -392,7 +389,7 @@
 
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-3"> 
+    <div class="col-sm-6 col-sm-offset-3 mobile-fix"> 
       <p>In the vast San Pedro complex (Los Angeles and Long Beach combined) 85 percent of drayage companies have less than 100 drivers, and 87 percent use exclusively owner operators who file 1099s. Those owner operators are considered their own little companies working for slightly larger little companies. Drivers average about 11 hours a day, with somewhere between five and eight hours spent waiting; 95 percent reported no pension or retirement plan, only 10 percent have health insurance. The median income is $25,000. Those numbers are consistent with New York, home to the country’s third largest port, where David Bensam found independent contractors earned an average of $28,000 for 60 hours of work per week. Likewise in Seattle, Atlanta, and most other port cities academics have studied.</p>
 
         <p>Independent contractors in the dray have no say in the cost of their services. Unlike the longshoremen (the labor aristocracy at the port), port truck drivers are non-employees, all offering the same service, in a field with close to 100 percent turnover. Port trucking companies -- and port cities -- underbid one another, racing to the bottom for shipping-retail contracts.</p>
@@ -413,7 +410,7 @@
 
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">    
+    <div class="col-sm-6 col-sm-offset-3 mobile-fix">    
         <div class="next-chapter">
           <a href="two.html"><div class="arrow-right mobile-hide"></div></a>
         <div>
