testing for page two

--- a/two.html
+++ b/two.html
@@ -91,9 +91,9 @@
 <p class="caption">Cargo ships anchored in the Los Angeles Harbor during West Coast port congestion, last spring, stretching for miles into the Pacific. <span class="attribution">Photo courtesy of Mike Kelley</span></p>
 
 
-<div class="container section">
+<div class="container section" >
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-0">    
+    <div class="col-sm-6 col-sm-offset-0 mobile-fix">    
         <p class="first-p"><span class="firstcharacter">M</span>AY 2010 -- “We are called independent contractors, but all we are is employees with expenses,” Jose Covarrubias testified, waving a petition with more than 600 drivers’ signatures. He was in a suit, behind a microphone, at the end of a panel with other men in suits behind microphones. “Our bosses tell this lie so they can make us pay for the company trucks.” The bosses to his left looked forward.</p>
 
         <p>The congressional subcommittee’s duty of the day was an assessment of the two-year-old environmental initiative at the ports of Los Angeles and Long Beach, a plan that had since been tentatively adopted by New Jersey, New York, Seattle, and Tacoma; five of the country’s busiest port cities. All eyes were on California.</p>
@@ -129,7 +129,7 @@
 
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-0">       
+    <div class="col-sm-6 col-sm-offset-0 mobile-fix">       
 
         <p>Husing was not himself prepared to dive into the deep end of a decades-long labor war. “That issue is a pressure cooker,” he said later. “You’re always going to piss somebody off.”</p>
 
@@ -147,9 +147,9 @@
   </div>
 </div> 
 
-<div class="container section">
+<div class="container section removeContainer">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-0">  
+    <div class="col-sm-6 col-sm-offset-0 mobile-fix">  
         <p class="long-quote">“A lot of companies went to the leasing model because that was a way to keep drivers,” said Marqus Coleman, an operations manager at Quik Pick Express, which is currently defending a class action lawsuit. It’s big customer is Fiji Water. “It kind of bypassed the whole clean initiative. We’re still going to get our money just on the back end. We’re going to buy the truck and have you buy into it and it’s a win win for us.”</p>
     </div>
   </div>
@@ -157,7 +157,7 @@
 
 <div class="container section">
     <div class="row">
-     <div class="col-sm-6 col-sm-offset-0">
+     <div class="col-sm-6 col-sm-offset-0 mobile-fix">
         <p class="text-center">***</p><hr>
         <p><span class="firstcharacter">T</span>wo years after he signed -- “They told me I could only work there if I signed a lease” -- Covarrubias quit his job driving at the port. He had fallen behind on his mortgage, and the bank foreclosed. And because he was never an employee, he didn’t qualify for unemployment insurance. He moved his wife and three daughters into a two-bedroom apartment, dropping the dog off at the pound on the way.</p>
 
@@ -168,7 +168,7 @@
 
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-0">  
+    <div class="col-sm-6 col-sm-offset-0 mobile-fix">  
         <p class="facts">Potter called the model “sharecropping-on-wheels,” forcing drivers like Covarrubias to choose food for their family or truck maintenance. Joe Rajkovacz, then regulatory director at the Owner-Operator Independent Drivers Association, is a longtime champion of independent contractors in trucking (and vocal critic of the Teamsters.) But even he said these agreements are “rent-to-own schemes,” “involuntary servitude” that “makes the payday loan industry look ethical.”</p>
     </div>
   </div>
@@ -176,7 +176,7 @@
 
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-0">      
+    <div class="col-sm-6 col-sm-offset-0 mobile-fix">      
 
         <p>The language in the leases is ubiquitous across the industry: Drivers pay a flat lease rate every week (regardless of productivity), expenses on the truck, and insurance that only covers approved routes (so they can’t drive for another company). The company removes those deductions from their weekly check. Drivers are still paid by container and dispatched routes by the company, with no customer interaction -- some are fined for missing a container quota. Still on a 1099.</p>
         
@@ -195,7 +195,7 @@
 
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-0"> 
+    <div class="col-sm-6 col-sm-offset-0 mobile-fix"> 
 
       <p>The clean truck program was a resounding environmental success. Air pollution emissions in the San Pedro complex dropped by 80 percent, two years ahead of schedule, while companies replaced some 7,000 trucks. The city even won an award from the EPA. But it came at a cost.</p>     
 
@@ -206,7 +206,7 @@
 
 <div class="container section transcriptOne transcript" id="#transcriptTwo">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-0">  
+    <div class="col-sm-6 col-sm-offset-0 mobile-fix">  
       <p class="democrat"><span class="conversation">DEFAZIO:</span> “Have you required that [companies] discount the price for the amount of the subsidy if they are leasing the truck to an owner-operator?</p>
 
       <p class="holmes"><span class="conversation">HOLMES:</span> The short answer is no, sir. We would like to think that—in our case, we provide funding only to the trucking companies— that they are passing any kind of subsidy on in terms of———</p>
@@ -220,7 +220,7 @@
 
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-0">      
+    <div class="col-sm-6 col-sm-offset-0 mobile-fix">      
 
       <p>The leases’ details emerged over the course of the afternoon. Congress, a majority of Democrats, took the occasion to air out the industry’s laundry. What exactly had Covarrubias unknowingly signed up for?</p>
     </div> 
@@ -234,7 +234,7 @@
 
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-0">  
+    <div class="col-sm-6 col-sm-offset-0 mobile-fix">  
       <p>Representative <span class="democrat-person">Jerrold Nadler (D)</span> from New York worked over ATA vice president and attorney <span class="holmes-person">Robert Digges</span> on the language in the agreements. Several of the leases stipulate that, should a driver break the contract, he’s on the hook for the remaining balance. “This would be totally coercive,” Nadler said, “Would it not be?” Digges conceded that much, “under the strict terms of your question.” DeFazio and others promised to subpoena the companies, investigate the lease agreements, and return to the issue after some of the confusion cleared.</p>    
     </div> 
   </div>
@@ -242,7 +242,7 @@
 
 <div class="container section transcript" id="#transcriptOne">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-0">  
+    <div class="col-sm-6 col-sm-offset-0 mobile-fix">  
         <p class="democrat"><span class="conversation">NADLER:</span> Many trucking companies now put drivers in company-owned trucks and pay them a flat percentage of the rate they receive from the shipper. With no ownership, lease, or any other legal interest in the truck, these drivers would normally be considered employed, showing up every day at the same company for the same jobs. But the companies brazenly force them to sign independent contract agreements and issue 1099s. Are you familiar with this practice?</p>
 
         <p class="holmes"><span class="conversation">DIGGES:</span> I am not, and———</p>
@@ -278,7 +278,7 @@
 
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-0">      
+    <div class="col-sm-6 col-sm-offset-0 mobile-fix">      
 
         <p>Later that year, in 2010, the democrats lost the House majority. Port truck drivers haven’t come up again since. No investigations were launched or subpoenas issued from the subcommittee. “It was quite a show, though,” Rajkovacz later said, “Wasn’t it?”</p>
         
@@ -304,7 +304,7 @@
 
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-0">      
+    <div class="col-sm-6 col-sm-offset-0 mobile-fix">      
 
       <p>Garcia, who has a wage claim pending with the labor commissioner, became involved in the misclassification campaign for a father’s reasons: health benefits, college savings for his kids, and a retirement plan. He also hopes to one day own a home. Like most of the port truck drivers now involved with the union campaign, Garcia said he was duped into thinking this job was a ticket to the middle class. “But in reality,” he said, “it’s all a farce and they are just lies fed to people like us.”</p>
 
@@ -334,7 +334,7 @@
 
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-0">      
+    <div class="col-sm-6 col-sm-offset-0 mobile-fix">      
 
       <p>The motivation behind the groundswell -- whether it’s organic (a Marxist sort of class consciousness) or labor organized -- may seem ancillary. But companies say that’s an important consideration when deciding how to respond. Either way; the hour has come. Almost 10 percent of truck drivers at the two biggest ports in the country are suing their bosses, for one reason or another. Smaller companies say that switching to employees isn’t practical, even if they wanted to. It would take a large player on the market -- like XPO -- to move the needle and realign prices to accommodate the new costs to companies. As is, the small companies don’t have leverage with retailers or shippers because the field is too competitive.</p>
 
@@ -353,9 +353,9 @@
   </div>
 </div> 
 
-<div class="container section">
+<div class="container section removeContainer">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-0">  
+    <div class="col-sm-6 col-sm-offset-0 mobile-fix">  
         <p class="long-quote">“With the regulation and economic reality, we felt that we had no choice. It's a funny thing because that fact has been used against us in several of these suits. It’s sort of under the heading of no good deed goes unpunished.”</p>
     </div>
   </div>
@@ -370,7 +370,7 @@
 
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-0">
+    <div class="col-sm-6 col-sm-offset-0 mobile-fix">
       <p class="text-center">***</p>      
       <p>Like most after 2008, Pacer Cartage, now XPO’s subsidiary, created an internal finance company as part of its new leasing program, effectively becoming a financier for drivers without good enough credit to lease a truck on their own. The driver leased from this new company, on paper, and then leased the title back to Pacer.</p>
 
@@ -384,9 +384,9 @@
   </div>
 </div> 
 
-<div class="container section">
+<div class="container section removeContainer">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-0">  
+    <div class="col-sm-6 col-sm-offset-0 mobile-fix">  
       <p class="long-quote">“This,” the judge said, “hardly sounds like treatment of independent contractors.”</p>
     </div>
   </div>
@@ -395,7 +395,7 @@
 
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-0">      
+    <div class="col-sm-6 col-sm-offset-0 mobile-fix">      
       <p>Every individual misclassification hearing and court case uses a complex matrix of factors because no all-inclusive definition of “employee” can be applied in broad strokes. The IRS has a different definition than the National Labor Relations Board, for instance. But they’re all vague enough to invite interpretation at every step. Just because this port truck driver is misclassified, doesn't mean they all are. Nonetheless, in sectors spread as thin as logistics, certain industries feel comfortable abandoning employees all together.</p>
 
       <p>“I’ve tried to address subcontracting, which changes the competitive dynamics,” Wage and Hour Division Administrator David Weil said. His bureau is charged with enforcing the Fair Labor Standards Act nationally. Today’s climate “creates incentives to cut costs -- cut labor costs and not comply. It plays out in different ways.”</p>
@@ -408,7 +408,7 @@
 
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-0">      
+    <div class="col-sm-6 col-sm-offset-0 mobile-fix">      
 
       <p>The court upheld the labor commissioner's judgement of about $300,000 to each driver in February. XPO has since appealed again, this time to the state Supreme Court.</p>
 
