--- a/three.html
+++ b/three.html
@@ -77,7 +77,7 @@
 
 <div class="container story_intro">
   <div class="row">
-    <div class="col-sm-8 col-sm-offset-2">
+    <div class="col-sm-8 col-sm-offset-2 mobile-fix">
        <p data-acnhor-target=".story_intro" data-center="opacity:0;" data-center-bottom="opacity:1">More than 60 different drayage companies have been dragged before hearing officers at the labor commissioner since the clean trucks program. They’ve lost 99 percent of the time. Some appeal, and then they lose again in court. Once a driver is found misclassified, they’re owed years of expense reimbursements, overtime and missed rest breaks. The judgements levied against them can total in the millions -- hundreds of thousands for individual drivers. A financial setback for some companies, but a fatal blow for most.</p>
 
        <p data-center="opacity:0;" data-center-bottom="opacity:1">So far the industry has been charged $22.3 million in total back wages. But they’ve paid just 12 percent of that. Most drivers have remained independent contractors, driving for the same company they sued.</p>
@@ -91,7 +91,7 @@
 
 <div class="container section" id="first-sec">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">    
+    <div class="col-sm-6 col-sm-offset-3 mobile-fix">    
         <!-- <h1 class="section_titles">Paper Tigers</h1> -->
 
         <p><span class="firstcharacter">“T</span>here’s a number of things I’ve done internally that I don’t publicize,” one company president said, “to protect assets, to make the company dispensable basically.” He requested anonymity for fear of being “targeted by the Teamsters.” A board member of the Harbor Trucking Association, the president has tried using employees before, but after a few months, the workers comp costs alone almost bankrupt him, and he switched back to independent contractors. Now he’s preparing to get sued by “splitting the company up” within itself. “Quite frankly, if any company -- whether it’s the Department of Labor or what kind of situation it is -- it will put them out of business. Quite frankly, I’m not keen to going out of business.”</p>
@@ -133,7 +133,7 @@
 
   <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">    
+    <div class="col-sm-6 col-sm-offset-3 mobile-fix">    
   
      </div>
 
@@ -143,7 +143,7 @@
         <img src="https://s3-us-west-2.amazonaws.com/port-feudal/bottlneck-birdseye.jpg"  class="img-responsive center-block photo photo-medium">
         <p class="caption">TK Name, an independent contractor from Vietnam, waits in line outside the terminal at Oakland’s inner harbor. His lunch is a bag of processed pastries from the drug store. (left) Trucks at the front of the line wait for the longshoremen to return from lunch. (right) Trucks bottleneck at the Port of Los Angeles. Drayage truckers are paid on a per-load basis, so many lost much of their income waiting for the congestion to clear. <span class="attribution">Photo courtesy of Mike Kelley</span></p>
 
-     <div class="col-sm-6 col-sm-offset-3">    
+     <div class="col-sm-6 col-sm-offset-3 mobile-fix">    
        
 
         <p>Pacific 9 filed for bankruptcy in April, listing 37 different debts -- about $182,000 on average -- as its cause for insolvency. One driver was awarded $386,000. The defense attorneys who have represented several of the companies argue it’s no surprise that these “astronomical amounts” aren’t getting paid. “Nobody can afford them,” one said.</p>
@@ -167,7 +167,7 @@
 
   <div class="container section">
     <div class="row">
-     <div class="col-sm-6 col-sm-offset-3"> 
+     <div class="col-sm-6 col-sm-offset-3 mobile-fix"> 
         <p><span class="firstcharacter">Q</span>TS filed for bankruptcy in August 2014, hitting the stop button on its many pending civil cases. The Wage Justice Center has since sued for “consolidation” in bankruptcy court, asking a jury to lump together all of the companies that have the same owners, cash flows and equipment, so that drivers can recoup the “ill-gotten gains” that the company is “shielding, through corporate shell games.”</p>
 
         <p>One of the QTS-related companies, WinWin Logistics, was levied a $3.6 million judgement from misclassification back wages in October of 2014, while it was still running operations at the ports. The company also has the largest single settlement payment in the industry’s history: It paid one driver $204,000 in August of 2015. The company’s trips in and out of the ports stopped that year. It disappeared from the harbor, but WinWin remained alive in QTS’s emails and bank statements.</p>
@@ -180,7 +180,7 @@
 
  <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-3"> 
+    <div class="col-sm-6 col-sm-offset-3 mobile-fix"> 
 
       <h3 class="g-title">The Economy of Port Trucking </h3>
      <!--  <h4 class="g-subtitle">This is just a placeholder, please do not read it.
@@ -246,7 +246,7 @@
 
   <div class="container section">
     <div class="row">
-     <div class="col-sm-6 col-sm-offset-3"> 
+     <div class="col-sm-6 col-sm-offset-3 mobile-fix"> 
 
         <p>One driver said management plopped large stacks of paper in front of him, in English, and demanded he sign. They were revised lease agreements, stating again and again that he was an independent contractor (at the time he didn’t know what that meant.) “I was not provided my paycheck until I signed.”</p>
 
@@ -263,9 +263,9 @@
       </div>
   </div>
 
-<div class="container section">
+<div class="container section removeContainer">
   <div class="row">
-    <div class="col-sm-8 col-sm-offset-2">  
+    <div class="col-sm-8 col-sm-offset-2 mobile-fix">  
         <p class="long-quote">“The problem is that [QTS] mixed the lease with the operation,” Madala said. “It would have been better if they kept it secret, if they didn’t do deductions but just took it, like a check, or paid indirectly. That would have removed the risk. The problem is they mixed everything together, accounting operations, everything, it looks like everything is one. The system was not a good system. The idea was good but they did not implement it very well.”</p>
     </div>
   </div>
@@ -277,7 +277,7 @@
          <div class="col-sm-6 col-sm-offset-3">  -->
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">
+    <div class="col-sm-6 col-sm-offset-3 mobile-fix">
         <p class="text-center">***</p>
         <p><span class="firstcharacter">Q</span>TS is one of many, in every industry, that takes advantage of a slow claims process. In response to UCLA’s “Hollow Victories” report in 2012, which showed the department’s poor enforcement rates, the labor commissioner drafted Senate Bill 588. It functions as a levee, requiring employers to post a bond once they’ve been ruled against in a wage hearing.</p>
 
@@ -318,7 +318,7 @@
 
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">
+    <div class="col-sm-6 col-sm-offset-3 mobile-fix">
 
         <p>Container traffic today is at an all time high. And tomorrow will probably be a new record. Combined imports and exports have double to almost 300 million tons (about 16 million containers) in the last two decades, according to federal maritime data. A quarter of those containers comes through California, and most need to get on a truck once stateside. Megaships longer than the Empire State Building on its belly carry as many as 65,000 at once.</p>
 
@@ -345,7 +345,7 @@
 
 <div class="container section">
   <div class="row">
-    <div class="col-sm-6 col-sm-offset-3">    
+    <div class="col-sm-6 col-sm-offset-3 mobile-fix">    
   
      </div>
 
@@ -355,7 +355,7 @@
 
         <p class="text-center">***</p>
 
-     <div class="col-sm-6 col-sm-offset-3">    
+     <div class="col-sm-6 col-sm-offset-3 mobile-fix">    
         <p><span class="firstcharacter">V</span>ic LaRosa has been president of Total Transportation Services Inc. for 20 years. In that time, he’s watched the far end of the supply chain fray. “If the operators, the stakeholders in all of the communities would operate across all lines as opposed to operating in their silos. Like the marine terminal operators, steamship lines another silo, the trucking companies a third silo, the BCOs [retailers] in their silo. If everyone would work in conjunction, you wouldn't have these problems.”</p>
 
         <p>LaRosa stressed that the dray is the worst offender. “Ship to the warehouse is the inefficient part of the supply chain. That's the part that's broken.” For decades, his company had grown from modestly successful to one of the biggest firms in Southern California, with some 200 independent contractors in his fleet.  “The most expensive part, mile for mile, of that supply chain, is the dray.”</p>
@@ -370,7 +370,7 @@
 
 <div class="container-fluid section">
   <div class="row">
-    <div class="col-sm-8 col-sm-offset-2">  
+    <div class="col-sm-8 col-sm-offset-2 mobile-fix">  
         <p class="long-quote">“We used the best lawyers we could find,” Rosenthal said. “Every company I’m sure did. Why is it that they got it wrong? Why is it, five years later, that the courts are uniformly saying that despite the fact you used your best effort, despite the fact that you read the law and you had it was interpreted by council, you were wrong five years ago. We are going to now impose what is effectively a new standard, expo facto. And we are going to impose millions of dollars of fines. That is what is happening today.”</p>
     </div>
   </div>
@@ -396,7 +396,7 @@
 
 <div class="container section">
     <div class="row">
-     <div class="col-sm-6 col-sm-offset-3">
+     <div class="col-sm-6 col-sm-offset-3 mobile-fix">
         <p>TTSI filed for bankruptcy in February.</p>
 
         <p>It happens to truck drivers every single day in the dray.</p>
@@ -420,7 +420,7 @@
 
 <div class="container section">
     <div class="row">
-     <div class="col-sm-6 col-sm-offset-3">
+     <div class="col-sm-6 col-sm-offset-3 mobile-fix">
 
         <p>So what’s keeping those still behind the wheel in their seat? In an industry with 100 percent turnover, it seems a fair enough question for those burdened with the inefficiencies of global trade. Villatoro’s wife asks him every day.</p>
 
@@ -600,7 +600,7 @@
 
 <div class="container-fluid final-credit">
     <div class="row">
-     <div class="col-sm-6 col-sm-offset-4">
+     <div class="col-sm-6 col-sm-offset-4 mobile-fix">
 
         <p><span class="credit-titile">Story, photography, video and illustrations by:</span></p> 
 
