--- a/two.html
+++ b/two.html
@@ -147,7 +147,7 @@
   </div>
 </div> 
 
-<div class="container section removeContainer">
+<div class="container section">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-0 mobile-fix">  
         <p class="long-quote">“A lot of companies went to the leasing model because that was a way to keep drivers,” said Marqus Coleman, an operations manager at Quik Pick Express, which is currently defending a class action lawsuit. It’s big customer is Fiji Water. “It kind of bypassed the whole clean initiative. We’re still going to get our money just on the back end. We’re going to buy the truck and have you buy into it and it’s a win win for us.”</p>
@@ -353,7 +353,7 @@
   </div>
 </div> 
 
-<div class="container section removeContainer">
+<div class="container section">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-0 mobile-fix">  
         <p class="long-quote">“With the regulation and economic reality, we felt that we had no choice. It's a funny thing because that fact has been used against us in several of these suits. It’s sort of under the heading of no good deed goes unpunished.”</p>
@@ -384,7 +384,7 @@
   </div>
 </div> 
 
-<div class="container section removeContainer">
+<div class="container section">
   <div class="row">
     <div class="col-sm-6 col-sm-offset-0 mobile-fix">  
       <p class="long-quote">“This,” the judge said, “hardly sounds like treatment of independent contractors.”</p>
