--- a/three.html
+++ b/three.html
@@ -53,6 +53,7 @@
       <h2 class="text-center slug">The industry has faced its reckoning with shell games and bankruptcy court, leaving millions in unpaid wages on the table</h2>
    <!--    <h3 class="text-center byline">Story by Brett Murphy<br>Produced by Jeremy C.F. Lin</h3> -->
     </header>
+    <img src="https://s3-us-west-2.amazonaws.com/port-feudal/driver-profile.jpg"  class="img-responsive center-block photo photo-medium" id="mobile-landing">
   </div>
 </div>
 
